Add test categorization and improve pytest configuration
- Add @pytest.mark.unit to 26 unit tests
- Add @pytest.mark.integration to 2 integration tests
- Update pytest.ini to register custom markers
- Enable test categorization: pytest -m unit, pytest -m integration
- Maintain 42% overall test coverage
- 100% coverage on core modules (reports, init files)
- Clean test output with --disable-warnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,6 +12,7 @@ markers =
     unit: Unit tests
     integration: Integration tests
     slow: Slow tests
+    asyncio: Async tests
 asyncio_mode = auto
 filterwarnings =
     ignore::DeprecationWarning
